--- a/final/style.css
+++ b/final/style.css
@@ -5,6 +5,7 @@
 
 body{
     font-family: 'DM Sans', sans-serif;
+    color: #2B292D;
 }
 
 /* Reset CSS */
@@ -41,17 +42,132 @@ li{
 p{
     font-size: 16px;
     line-height: 1.5;
-    color: #2B292D;
     letter-spacing: -0.01em;
 }
 
+.fill-button{
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    width: 140px;
+    height: 48px;
+    border-radius: 2px;
+    font-size: 15px;
+    font-weight: 700;
+    line-height: 1.6;
+    letter-spacing: -0.05em;
+    color: #fff;
+    background-color: #3040C4;
+    transition: opacity 300ms ease-in-out;
+}
+
+.fill-button.inverted{
+    color: #3040C4;
+    background-color: #fff;
+}
+
+.fill-button:hover{
+    opacity: 0.5;
+}
+
+/* Landing */
+.landing{
+    background-color: #FDDED8;
+    text-align: center;
+}
+
+.landing-content{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 100%;
+    height: 100vh;
+}
+
+.landing-title{
+    margin-bottom: 24px;
+    color: #2B292D;
+    font-size: 40px;
+    line-height: 1;
+    text-space: -0.05em;
+}
+
+.landing-desc{
+    margin-bottom: 20px;
+}
+
+.landing .button-group{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.landing .button-group .fill-button:first-child{
+    margin-right: 8px;
+}
+
+/* Service */
+.service{
+    padding: 80px 0;
+    background-color: #F4F5F7;
+}
+
+.service .col-12:first-child{
+    margin-bottom: 40px;
+}
+
+.service-title{
+    margin-bottom: 16px;
+    font-size: 22px;
+    line-height: 1.3636363636;
+    letter-space: -0.04em;
+}
+
+
 /* 768px 이상 (Desktop) */
-@media screen and (max-width: 768px){
+@media screen and (min-width: 768px){
 
     /* Reset CSS */
     p{
         font-size: 22px;
         line-height: 1.3636363636;
+    }
+
+    .fill-button{
+        width: 160px;
+        height: 56px;
+        font-size: 18px;
+        line-height: 1.5555555556;
+    }
+
+    /* Landing */
+    .landing-content{
+        height: auto;
+        padding: 120px 0;
+    }
+
+    .landing-title{
+        margin-bottom: 32px;
+        font-size: 70px;
+        line-height: 1.0285714286;
+    }
+
+    .landing-desc{
+        margin-bottom: 32px;
+    }
+
+    .landing .button-group .fill-button:first-child{
+        margin-right: 16px;
+    }
+
+    /* Service */
+    .service-title{
+        font-size: 26px;
+        line-height: 1.3076923077;
+    }
+
+    .service .col-12:first-child{
+        margin-bottom: 0;
     }
 }
 
