--- a/final/style.css
+++ b/final/style.css
@@ -70,6 +70,25 @@ p{
     opacity: 0.5;
 }
 
+.section{
+    padding: 80px 0;
+}
+
+.section-category{
+    display: block;
+    margin-bottom: 8px;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: -0.01em;
+}
+
+.section-title{
+    margin-bottom: 24px;
+    font-size: 34px;
+    line-height: 1.0588235294;
+    letter-spacing: 0.04em;
+}
+
 /* Landing */
 .landing{
     background-color: #FDDED8;
@@ -120,8 +139,91 @@ p{
     margin-bottom: 16px;
     font-size: 22px;
     line-height: 1.3636363636;
-    letter-space: -0.04em;
+    letter-space: -0.03em;
 }
+
+/* Program */
+.program{
+    text-align: center;
+}
+
+.program .section-category{
+    color: #009B4D;
+}
+
+.program .row:first-child{
+    margin-bottom: 32px;
+}
+
+.program .col-md-4{
+    margin-bottom: 20px;
+}
+
+.program .col-md-4:last-child{
+    margin-bottom: 0;
+}
+
+.program-card{
+    display: block;
+    padding: 24px 0 32px;
+    border-radius: 8px;
+    text-align: center;
+    background-color: #fff;
+    box-shadow: 0 4px 4px rgba(0,0,0,0.25);
+    transition: background-color 300ms ease-in-out,
+                box-shadow 300ms ease-in-out;
+}
+
+.program-card:hover{
+    background-color: #3141C5;
+    box-shadow: 0px 11px 55px rgba(0, 0, 0, 0.07), 0px 13px 18px rgba(0, 0, 0, 0.15);
+}
+
+.program-card:hover strong{
+    color: #fff;
+    transition: color 300ms ease-in-out;
+}
+
+.program-card img{
+    display: block;
+    width: auto;
+    height: 195px;
+    margin: 0 auto 16px;
+}
+
+.program-card strong{
+    font-size: 18px;
+    line-height: 1.3333333333;
+    letter-spacing: -0.02em;
+}
+
+/*  Curriculum */
+.curriculum .row:first-child{
+    margin-bottom: 48px;
+}
+
+.curriculum .row:last-child .col-12:first-child{
+    margin-bottom: 40px;
+}
+
+.curriculum .section-category{
+    color: #0189D1;
+}
+
+.curriculum .section-desc{
+    margin-bottom: 32px;
+}
+
+.curriculum-image img{
+    display: none;
+}
+
+.curriculum-detail-desc{
+    font-size: 15px;
+    line-height: 1.4666666667;
+    letter-spacing: 0.01em;
+}
+
 
 
 /* 768px 이상 (Desktop) */
@@ -138,6 +240,23 @@ p{
         height: 56px;
         font-size: 18px;
         line-height: 1.5555555556;
+    }
+
+    .section{
+        padding-bottom: 96px;
+    }
+
+    .section-category{
+        margin-bottom: 16px;
+        font-size: 22px;
+        line-height: 1.0909090909;
+    }
+
+    .section-title{
+        margin-bottom: 32px;
+        font-size: 56px;
+        line-height: 1;
+        letter-spacing: -0.03em;
     }
 
     /* Landing */
@@ -168,6 +287,46 @@ p{
 
     .service .col-12:first-child{
         margin-bottom: 0;
+    }
+
+    /* Program */
+    .program .row:first-child{
+        margin-bottom: 72px;
+    }
+
+    .curriculum .row:last-child .col-12:first-child{
+        margin-bottom: 0;
+    }
+
+    .program-card img{
+        margin-bottom: 24px;
+    }
+
+    .program-card strong{
+        font-size: 20px;
+        line-height: 1.2;
+        letter-spacing: -0.02em;
+    }
+
+    /* Curriculum */
+    .curriculum .row:first-child{
+        margin-bottom: 24px;
+    }
+
+    .curriculum .section-desc{
+        margin-bottom: 72px;
+    }
+
+    .curriculum-image img{
+        display: block;
+        width: 100%;
+        max-width: 425px;
+        height: auto;
+    }
+
+    .curriculum-detail-desc{
+        font-size: 18px;
+        line-height: 1.4444444444;
     }
 }
 
